# terminal-rs

./: Cargo.toml
src/: main.rs
src/commands/: args.rs  impls.rs  mod.rs  native.rs
src/core/: input.rs  mod.rs  prompt.rs  settings.rs
src/logger/: mod.rs
