[package]
name = "terminal-rs"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker-flavor=rust-lld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
inline_colorization = "0.1.5"
text_io = "0.1.12"
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
execute = "0.2.12"
is_executable = "1.0.1"
ctrlc = "3.4.1"
termsize = "0.1.6"
